src/objects/Vendor_POP_Batch__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Account Id + Publication Code
* Unique per day</description>
        <label>External Id</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fillers__c</fullName>
        <label>Fillers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normalized_View__c</fullName>
        <formula>RPAD(Publication_Code__c, 4, &apos;.&apos;) +
IF(LEN(TEXT(DAY(Publication_Issue_Date__c)))=1, &apos;0&apos; + TEXT(DAY(Publication_Issue_Date__c)), TEXT(DAY(Publication_Issue_Date__c))) + &apos;.&apos; +
IF(LEN(TEXT(MONTH(Publication_Issue_Date__c)))=1, &apos;0&apos; + TEXT(MONTH(Publication_Issue_Date__c)), TEXT(MONTH(Publication_Issue_Date__c))) + &apos;.&apos; +
IF(LEN(TEXT(YEAR(Publication_Issue_Date__c)))=1, &apos;0&apos; + TEXT(YEAR(Publication_Issue_Date__c)), TEXT(YEAR(Publication_Issue_Date__c))) +
LEFT(Vendor_Group__c,1) + 
RPAD(Vendor_Number__c, 5, &apos;.&apos;) +
LPAD(TEXT(Total_Direct_Subscriptions__c), 9, &apos;.&apos;) +
LPAD(TEXT(Total_Sponsored_Copies__c), 9, &apos;.&apos;) +
RPAD(Fillers__c, 61)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Normalized View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Date__c</fullName>
        <label>Publication Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Vendor POP Batches</relationshipLabel>
        <relationshipName>Vendor_POP_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Subscriptions__c</fullName>
        <label>Total Direct Subscriptions</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Local_Freelist_Copies__c</fullName>
        <label>Total Local Freelist Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Local_Subscription_Copies__c</fullName>
        <label>Total Local Subscription Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overseas_Freelist_Copies__c</fullName>
        <label>Total Overseas Freelist Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overseas_Subscription_Copies__c</fullName>
        <label>Total Overseas Subscription Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sponsored_Copies__c</fullName>
        <label>Total Sponsored Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vendor POP Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Subscription_Name__c</columns>
        <columns>Total_Direct_Subscriptions__c</columns>
        <columns>Total_Local_Freelist_Copies__c</columns>
        <columns>Total_Local_Subscription_Copies__c</columns>
        <columns>Total_Overseas_Freelist_Copies__c</columns>
        <columns>Total_Overseas_Subscription_Copies__c</columns>
        <columns>Total_Sponsored_Copies__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Verification</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Subscription__c</columns>
        <columns>Subscription_Name__c</columns>
        <columns>Total_Direct_Subscriptions__c</columns>
        <columns>Total_Local_Freelist_Copies__c</columns>
        <columns>Total_Local_Subscription_Copies__c</columns>
        <columns>Total_Overseas_Freelist_Copies__c</columns>
        <columns>Total_Overseas_Subscription_Copies__c</columns>
        <columns>Total_Sponsored_Copies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Name__c</field>
            <operation>equals</operation>
            <value>BA-S01712472</value>
        </filters>
        <label>For Verification</label>
    </listViews>
    <listViews>
        <fullName>X0414E_05may</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Subscription_Name__c</columns>
        <columns>Total_Direct_Subscriptions__c</columns>
        <columns>Total_Local_Freelist_Copies__c</columns>
        <columns>Total_Local_Subscription_Copies__c</columns>
        <columns>Total_Overseas_Freelist_Copies__c</columns>
        <columns>Total_Overseas_Subscription_Copies__c</columns>
        <columns>Total_Sponsored_Copies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_Name__c</field>
            <operation>contains</operation>
            <value>BA-S01712472</value>
        </filters>
        <label>ST 0414E</label>
    </listViews>
    <listViews>
        <fullName>xx</fullName>
        <columns>NAME</columns>
        <columns>Publication_Code__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>Vendor_Group__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Subscription_Name__c</columns>
        <columns>Total_Direct_Subscriptions__c</columns>
        <columns>Total_Local_Freelist_Copies__c</columns>
        <columns>Total_Local_Subscription_Copies__c</columns>
        <columns>Total_Overseas_Freelist_Copies__c</columns>
        <columns>Total_Overseas_Subscription_Copies__c</columns>
        <columns>Total_Sponsored_Copies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_Code__c</field>
            <operation>equals</operation>
            <value>YOU</value>
        </filters>
        <label>xx</label>
    </listViews>
    <nameField>
        <displayFormat>POP-{0000000000}</displayFormat>
        <label>Vendor POP Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor POP Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>